fix font spacing in introduction

--- a/src/components/introduction/Introduction.scss
+++ b/src/components/introduction/Introduction.scss
@@ -45,7 +45,7 @@
         animation: text-in 0s linear 0.5s forwards;
       }
 
-      &__description {
+      &__description-container {
         display: flex;
         flex-direction: column;
         font-weight: normal;
@@ -53,6 +53,15 @@
 
         @media only screen and (min-width: $desktop) {
           row-gap: 12px;
+        }
+      }
+
+      &__description {
+        font-weight: normal;
+        line-height: 24px;
+
+        @media only screen and (min-width: $desktop) {
+          line-height: 32px;
         }
 
         &__organisation {
